tests/src/frontend/typechecking/invalid/different_pat_type_constants_3.sk
base class X

base class TCClass<T> {
  type C1;
}

base class TCClass2 extends TCClass<this::C1>

base class P1<T1, T2: TCClass<T1>> {
  type Tbody: TCClass2;
}

base class P2 extends P1<this::Tbody::C1, this::Tbody>

fun main(): void {
  print_string("Pass")
}
